--- a/index.html
+++ b/index.html
@@ -5950,8 +5950,8 @@
   .motto212{
   position: absolute;
   bottom: 200px;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 50px;
+  /*transform: translateX(-50%);*/
   color: #42ecf5;
   font-size: 18px;
   }
@@ -5959,8 +5959,8 @@
   .motto213{
   position: absolute;
   bottom: 170px;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 50px;
+  /*transform: translateX(-50%);*/
   color: #42ecf5;
   font-size: 18px;
   }
@@ -5968,8 +5968,8 @@
   .motto214{
   position: absolute;
   bottom: 155px;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 50px;
+  /*transform: translateX(-50%);*/
   color: #42ecf5;
   font-size: 18px;
   }
@@ -5977,8 +5977,8 @@
   .motto215{
   position: absolute;
   bottom: 120px;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 50px;
+  /*transform: translateX(-50%);*/
   color: #42ecf5;
   font-size: 18px;
   }
@@ -8756,8 +8756,10 @@
     </div>
     <div class = "back21">
         <a class="mottosign21">Motto</a>
-        <p class="motto212">"Being cute</p>
-        <p class="motto213">is not easy."</p>
+        <p class="motto212">"Hindi naman ako</p>
+        <p class="motto213">chismosa eh,</p>
+        <p class="motto214">nagtatanong lang</p>
+        <p class="motto215">kung ba't nag away."</p>
       <div class="iconsid21">
         <a href="https://www.facebook.com/babychewy.wans" class="linkid21"><i class="fab fa-facebook-f"></i></a>
         <a class="linkid21"><abbr title="Not Available"><i class="fab fa-instagram"></i></abbr></a>
