--- a/index.html
+++ b/index.html
@@ -5949,8 +5949,8 @@
 
   .motto212{
   position: absolute;
-  bottom: 200px;
-  left: 50px;
+  bottom: 220px;
+  left: 60px;
   /*transform: translateX(-50%);*/
   color: #42ecf5;
   font-size: 18px;
@@ -5958,17 +5958,17 @@
 
   .motto213{
   position: absolute;
-  bottom: 170px;
-  left: 50px;
-  /*transform: translateX(-50%);*/
+  bottom: 190px;
+  left: 50%;
+  transform: translateX(-50%);
   color: #42ecf5;
   font-size: 18px;
   }
 
   .motto214{
   position: absolute;
-  bottom: 155px;
-  left: 50px;
+  bottom: 160px;
+  left: 60px;
   /*transform: translateX(-50%);*/
   color: #42ecf5;
   font-size: 18px;
@@ -5976,8 +5976,8 @@
 
   .motto215{
   position: absolute;
-  bottom: 120px;
-  left: 50px;
+  bottom: 130px;
+  left: 65px;
   /*transform: translateX(-50%);*/
   color: #42ecf5;
   font-size: 18px;
