--- a/index.html
+++ b/index.html
@@ -7978,6 +7978,563 @@
   color:#0095ff;
   }
 
+
+
+
+
+  .card29-container{
+width:300px;
+height:400px;
+border-radius:4px;
+perspective:980px;
+background-color:transparent;
+}
+
+.card29{
+position:relative;
+width:100%;
+height:100%;
+transition:all .7s;
+transform-style:preserve-3d;
+}
+
+.card29-container:hover .card29{
+transform:rotateY(-180deg);
+}
+
+.front29{
+background:linear-gradient(135deg , #fe5dfd , #f7fa63);
+}
+
+.back29{
+background:linear-gradient(135deg , #fc6efa , #fe5758);
+transform:rotateY(-180deg);
+}
+
+.front29 , .back29{
+position:absolute;
+width:100%;
+height:100%;
+display:flex;
+/*align-items:center;
+justify-content:center;*/
+color:white;
+border-radius:4px;
+box-shadow:0 10px 20px rgba(0, 0, 0, .19),
+                       0 6px 6px rgba(0, 0, 0,.23);
+                       backface-visibility:hidden;
+                       }
+
+.id29{
+position: absolute;
+bottom: 110px;
+left: 50%;
+transform: translateX(-50%);
+}
+
+.id29 .spanid29{
+color:#ffffff;
+font-size:15px;
+font-weight:bolder;
+letter-spacing:1px;
+animation: light 3s infinite;
+}
+
+@keyframes light{
+
+  0%, 20%{
+  color:#fee5e9;
+  text-shadow: 0 0 10px #d03f4a;
+  }
+
+  40%{
+  color:#f4f3f5;
+  text-shadow:0 0 10px #1b3ba8;
+  }
+
+  60%{
+  color:#caa074;
+  text-shadow:0 0 10px #2f1704;
+  }
+
+  80%{
+  color:#8a98ae;
+  text-shadow:0 0 10px #283446;
+  }
+
+  100%{
+  color:#efeeb5;
+  text-shadow:0 0 10px #2a290c;
+  }
+}
+
+.spanid29:nth-child(1){
+animation-delay: .2s;
+}
+
+.spanid29:nth-child(2){
+animation-delay: .4s;
+}
+
+.spanid29:nth-child(3){
+animation-delay: .6;
+}
+
+.spanid29:nth-child(4){
+animation-delay: .8s;
+}
+
+.spanid29:nth-child(5){
+animation-delay: 1s;
+}
+
+.spanid29:nth-child(6){
+animation-delay: 1.2s;
+}
+
+.spanid29:nth-child(7){
+animation-delay: 1.4;
+}
+
+.spanid29:nth-child(8){
+animation-delay: 1.6s;
+}
+
+.spanid29:nth-child(9){
+animation-delay: 1.8s;
+}
+
+.spanid29:nth-child(10){
+animation-delay: 2s;
+}
+
+.spanid29:nth-child(11){
+animation-delay: 2.2;
+}
+
+.spanid29:nth-child(12){
+animation-delay: 2.4s;
+}
+
+.spanid29:nth-child(13){
+animation-delay: 2.6s;
+}
+
+.img32 {
+position: absolute;
+width: 100px;
+height: 100px;
+object-fit: cover;
+top: 80px;
+left: 50%;
+transform: translateX(-50%);
+border-radius: 50%;
+}
+
+.adminsign29 {
+position: absolute;
+bottom: 160px;
+left: 50%;
+transform: translateX(-50%);
+}
+.adminsign29 .aadminsign29 {
+text-decoration: none;
+padding: 10px 30px;
+color: #3ffc5b;
+border: solid 3px #3ffc5b;
+border-radius: 18px;
+}
+
+.mottosign29 {
+position: absolute;
+bottom: 280px;
+left: 50%;
+transform: translateX(-50%);
+color: #3ffc5b;
+font-size: 30px;
+}
+
+.motto29{
+position: absolute;
+bottom: 150px;
+left: 50%;
+transform: translateX(-50%);
+color: #ec66fa;
+font-size: 18px;
+}
+
+.motto292{
+position: absolute;
+bottom: 200px;
+left: 50%;
+transform: translateX(-50%);
+color: #42ecf5;
+font-size: 18px;
+}
+
+.motto293{
+position: absolute;
+bottom: 170px;
+left: 50%;
+transform: translateX(-50%);
+color: #42ecf5;
+font-size: 18px;
+}
+
+.motto294{
+position: absolute;
+bottom: 160px;
+left: 50%;
+transform: translateX(-50%);
+color: #42ecf5;
+font-size: 18px;
+}
+
+.motto295{
+position: absolute;
+bottom: 130px;
+left: 50%;
+transform: translateX(-50%);
+color: #42ecf5;
+font-size: 18px;
+}
+
+.iconsid29 {
+position: absolute;
+bottom: 20px;
+height: 100px;
+width: 100%;
+left: 50%;
+transform: translateX(-50%);
+z-index: 1;
+display: flex;
+justify-content: center;
+}
+
+.linkid29{
+position:relative;
+display:block;
+width:40px;
+height:40px;
+font-size:20px;
+line-height:40px;
+background:#1b1b1b;
+margin:7px;
+cursor:pointer;
+border-radius:50%;
+text-align:center;
+box-shadow:0 2px 3px rgba(0,0,0,1), inset 0 -1px 4px rgba(0,0,0,1),
+inset 1px -1px  4px rgba(0,0,0,1), inset 1px -1px 6px 0  rgba(225,225,225,.5),
+0 0 1px 1px #000,0 0 1px 4px #0c0c0c,0 0 0 4px #080808;
+transition:.4s;
+color: #f7979a;
+}
+
+.linkid29:before{
+position:absolute:
+content: " ";
+top:0;
+left:0;
+background:cadetblue;
+height:100%;
+width:100%;
+border-radius:50%;
+z-index:-2;
+transform:scale(0.5);
+transition:0.3s;
+}
+
+.linkid29:hover:before{
+filter:blur(3px);
+transform:scale(1.2);
+box-shadow:0 0 9 rgba(0,0,0,1), inset 0 -1px 4px rbga(0,0,0,1), inset 0px 1px rgba(225,225,225,.1),
+0 0 0 1px #000,0 0 0 1px #0095ff,0 0 9px 8px #0095ff;
+}
+
+.linkid29:hover {
+color:#0095ff;
+}
+
+
+
+
+.card30-container{
+width:300px;
+height:400px;
+border-radius:4px;
+perspective:980px;
+background-color:transparent;
+}
+
+.card30{
+position:relative;
+width:100%;
+height:100%;
+transition:all .7s;
+transform-style:preserve-3d;
+}
+
+.card30-container:hover .card30{
+transform:rotateY(-180deg);
+}
+
+.front30{
+background:linear-gradient(135deg , #fe5dfd , #f7fa63);
+}
+
+.back30{
+background:linear-gradient(135deg , #fc6efa , #fe5758);
+transform:rotateY(-180deg);
+}
+
+.front30 , .back30{
+position:absolute;
+width:100%;
+height:100%;
+display:flex;
+/*align-items:center;
+justify-content:center;*/
+color:white;
+border-radius:4px;
+box-shadow:0 10px 20px rgba(0, 0, 0, .19),
+                       0 6px 6px rgba(0, 0, 0,.23);
+                       backface-visibility:hidden;
+                       }
+
+.id30{
+position: absolute;
+bottom: 110px;
+left: 50%;
+transform: translateX(-50%);
+}
+
+.id30 .spanid30{
+color:#ffffff;
+font-size:15px;
+font-weight:bolder;
+letter-spacing:1px;
+animation: light 3s infinite;
+}
+
+@keyframes light{
+
+  0%, 20%{
+  color:#fee5e9;
+  text-shadow: 0 0 10px #d03f4a;
+  }
+
+  40%{
+  color:#f4f3f5;
+  text-shadow:0 0 10px #1b3ba8;
+  }
+
+  60%{
+  color:#caa074;
+  text-shadow:0 0 10px #2f1704;
+  }
+
+  80%{
+  color:#8a98ae;
+  text-shadow:0 0 10px #283446;
+  }
+
+  100%{
+  color:#efeeb5;
+  text-shadow:0 0 10px #2a290c;
+  }
+}
+
+.spanid30:nth-child(1){
+animation-delay: .2s;
+}
+
+.spanid30:nth-child(2){
+animation-delay: .4s;
+}
+
+.spanid30:nth-child(3){
+animation-delay: .6;
+}
+
+.spanid30:nth-child(4){
+animation-delay: .8s;
+}
+
+.spanid30:nth-child(5){
+animation-delay: 1s;
+}
+
+.spanid30:nth-child(6){
+animation-delay: 1.2s;
+}
+
+.spanid30:nth-child(7){
+animation-delay: 1.4;
+}
+
+.spanid30:nth-child(8){
+animation-delay: 1.6s;
+}
+
+.spanid30:nth-child(9){
+animation-delay: 1.8s;
+}
+
+.spanid30:nth-child(10){
+animation-delay: 2s;
+}
+
+.spanid30:nth-child(11){
+animation-delay: 2.2;
+}
+
+.spanid30:nth-child(12){
+animation-delay: 2.4s;
+}
+
+.spanid30:nth-child(13){
+animation-delay: 2.6s;
+}
+
+.img33 {
+position: absolute;
+width: 100px;
+height: 100px;
+object-fit: cover;
+top: 80px;
+left: 50%;
+transform: translateX(-50%);
+border-radius: 50%;
+}
+
+.adminsign30 {
+position: absolute;
+bottom: 160px;
+left: 50%;
+transform: translateX(-50%);
+}
+.adminsign30 .aadminsign30 {
+text-decoration: none;
+padding: 10px 30px;
+color: #3ffc5b;
+border: solid 3px #3ffc5b;
+border-radius: 18px;
+}
+
+.mottosign30 {
+position: absolute;
+bottom: 280px;
+left: 50%;
+transform: translateX(-50%);
+color: #3ffc5b;
+font-size: 30px;
+}
+
+.motto30{
+position: absolute;
+bottom: 150px;
+left: 50%;
+transform: translateX(-50%);
+color: #ec66fa;
+font-size: 18px;
+}
+
+.motto302{
+position: absolute;
+bottom: 220px;
+left: 60px;
+/*transform: translateX(-50%);*/
+color: #42ecf5;
+font-size: 18px;
+}
+
+.motto303{
+position: absolute;
+bottom: 190px;
+left: 50%;
+transform: translateX(-50%);
+color: #42ecf5;
+font-size: 18px;
+}
+
+.motto304{
+position: absolute;
+bottom: 160px;
+left: 50%;
+transform: translateX(-50%);
+color: #42ecf5;
+font-size: 18px;
+}
+
+.motto305{
+position: absolute;
+bottom: 130px;
+left: 65px;
+/*transform: translateX(-50%);*/
+color: #42ecf5;
+font-size: 18px;
+}
+
+.iconsid30 {
+position: absolute;
+bottom: 20px;
+height: 100px;
+width: 100%;
+left: 50%;
+transform: translateX(-50%);
+z-index: 1;
+display: flex;
+justify-content: center;
+}
+
+.linkid30{
+position:relative;
+display:block;
+width:40px;
+height:40px;
+font-size:20px;
+line-height:40px;
+background:#1b1b1b;
+margin:7px;
+cursor:pointer;
+border-radius:50%;
+text-align:center;
+box-shadow:0 2px 3px rgba(0,0,0,1), inset 0 -1px 4px rgba(0,0,0,1),
+inset 1px -1px  4px rgba(0,0,0,1), inset 1px -1px 6px 0  rgba(225,225,225,.5),
+0 0 1px 1px #000,0 0 1px 4px #0c0c0c,0 0 0 4px #080808;
+transition:.4s;
+color: #f7979a;
+}
+
+.linkid30:before{
+position:absolute:
+content: " ";
+top:0;
+left:0;
+background:cadetblue;
+height:100%;
+width:100%;
+border-radius:50%;
+z-index:-2;
+transform:scale(0.5);
+transition:0.3s;
+}
+
+.linkid30:hover:before{
+filter:blur(3px);
+transform:scale(1.2);
+box-shadow:0 0 9 rgba(0,0,0,1), inset 0 -1px 4px rbga(0,0,0,1), inset 0px 1px rgba(225,225,225,.1),
+0 0 0 1px #000,0 0 0 1px #0095ff,0 0 9px 8px #0095ff;
+}
+
+.linkid30:hover {
+color:#0095ff;
+}
+
+
+
+
+
   .cardlabel{
   font-size: 15px;
   /*bottom: 15px;
@@ -9011,6 +9568,73 @@
         <a href="https://www.instagram.com/fredfredie03?igshid=1fwcmivezd23q" class="linkid28"><i class="fab fa-instagram"></i></a>
         <a href="https://www.twitter.com/fredfredie03?s=09" class="linkid28"><i class="fab fa-twitter"></i></a>
         <a class="linkid28"><abbr title="Not Available"><i class="fab fa-whatsapp"></i></abbr></a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+<div class = "card29-container ins">
+  <div class = "card29">
+    <div class = "front29">
+      <img class="img32" src="Hazel.jpeg" alt="" />
+      <h4 class="adminsign29"><a class="aadminsign29">Moderator</a></h4>
+        <div class="id29">
+          <span class="spanid29">H</span>
+          <span class="spanid29">A</span>
+          <span class="spanid29">Z</span>
+          <span class="spanid29">E</span>
+          <span class="spanid29">L</span>
+        </div>
+      <p class="cardlabel">Click the card for more info</p>
+    </div>
+    <div class = "back29">
+        <a class="mottosign29">Motto</a>
+        <p class="motto292">"No I.D.</p>
+        <p class="motto293">No Entry."</p>
+      <div class="iconsid29">
+        <a href="https://www.facebook.com/haaaazeeee" class="linkid29"><i class="fab fa-facebook-f"></i></a>
+        <a class="linkid29"><abbr title="Not Available"><i class="fab fa-instagram"></i></abbr></a>
+        <a class="linkid29"><abbr title="Not Available"><i class="fab fa-twitter"></i></abbr></a>
+        <a class="linkid29"><abbr title="Not Available"><i class="fab fa-whatsapp"></i></abbr></a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+<div class = "card30-container ins">
+  <div class = "card30">
+    <div class = "front30">
+      <img class="img33" src="Winter.jpeg" alt="" />
+      <h4 class="adminsign30"><a class="aadminsign30">Moderator</a></h4>
+        <div class="id30">
+          <span class="spanid30">W</span>
+          <span class="spanid30">I</span>
+          <span class="spanid30">N</span>
+          <span class="spanid30">T</span>
+          <span class="spanid30">E</span>
+          <span class="spanid30">R</span>
+        </div>
+      <p class="cardlabel">Click the card for more info</p>
+    </div>
+    <div class = "back30">
+        <a class="mottosign30">Motto</a>
+        <p class="motto302">"Sometimes, someday</p>
+        <p class="motto303">you'll realize that</p>
+        <p class="motto304">being lost is so</p>
+        <p class="motto305">close to being found."</p>
+      <div class="iconsid30">
+        <a href="https://www.facebook.com/ysa/montella" class="linkid30"><i class="fab fa-facebook-f"></i></a>
+        <a class="linkid30"><abbr title="Not Available"><i class="fab fa-instagram"></i></abbr></a>
+        <a class="linkid30"><abbr title="Not Available"><i class="fab fa-twitter"></i></abbr></a>
+        <a class="linkid30"><abbr title="Not Available"><i class="fab fa-whatsapp"></i></abbr></a>
       </div>
     </div>
   </div>
