--- a/index.html
+++ b/index.html
@@ -8535,6 +8535,283 @@ color:#0095ff;
 
 
 
+.card33-container{
+width:300px;
+height:400px;
+border-radius:4px;
+perspective:980px;
+background-color:transparent;
+}
+
+.card33{
+position:relative;
+width:100%;
+height:100%;
+transition:all .7s;
+transform-style:preserve-3d;
+}
+
+.card33-container:hover .card33{
+transform:rotateY(-180deg);
+}
+
+.front33{
+background:linear-gradient(135deg , #fe5dfd , #f7fa63);
+}
+
+.back33{
+background:linear-gradient(135deg , #fc6efa , #fe5758);
+transform:rotateY(-180deg);
+}
+
+.front33 , .back33{
+position:absolute;
+width:100%;
+height:100%;
+display:flex;
+/*align-items:center;
+justify-content:center;*/
+color:white;
+border-radius:4px;
+box-shadow:0 10px 20px rgba(0, 0, 0, .19),
+                       0 6px 6px rgba(0, 0, 0,.23);
+                       backface-visibility:hidden;
+                       }
+
+.id33{
+position: absolute;
+bottom: 110px;
+left: 50%;
+transform: translateX(-50%);
+}
+
+.id33 .spanid33{
+color:#ffffff;
+font-size:15px;
+font-weight:bolder;
+letter-spacing:1px;
+animation: light 3s infinite;
+}
+
+@keyframes light{
+
+  0%, 20%{
+  color:#fee5e9;
+  text-shadow: 0 0 10px #d03f4a;
+  }
+
+  40%{
+  color:#f4f3f5;
+  text-shadow:0 0 10px #1b3ba8;
+  }
+
+  60%{
+  color:#caa074;
+  text-shadow:0 0 10px #2f1704;
+  }
+
+  80%{
+  color:#8a98ae;
+  text-shadow:0 0 10px #283446;
+  }
+
+  100%{
+  color:#efeeb5;
+  text-shadow:0 0 10px #2a290c;
+  }
+}
+
+.spanid33:nth-child(1){
+animation-delay: .2s;
+}
+
+.spanid33:nth-child(2){
+animation-delay: .4s;
+}
+
+.spanid33:nth-child(3){
+animation-delay: .6;
+}
+
+.spanid33:nth-child(4){
+animation-delay: .8s;
+}
+
+.spanid33:nth-child(5){
+animation-delay: 1s;
+}
+
+.spanid33:nth-child(6){
+animation-delay: 1.2s;
+}
+
+.spanid33:nth-child(7){
+animation-delay: 1.4;
+}
+
+.spanid33:nth-child(8){
+animation-delay: 1.6s;
+}
+
+.spanid33:nth-child(9){
+animation-delay: 1.8s;
+}
+
+.spanid33:nth-child(10){
+animation-delay: 2s;
+}
+
+.spanid33:nth-child(11){
+animation-delay: 2.2;
+}
+
+.spanid33:nth-child(12){
+animation-delay: 2.4s;
+}
+
+.spanid33:nth-child(13){
+animation-delay: 2.6s;
+}
+
+.img36 {
+position: absolute;
+width: 100px;
+height: 100px;
+object-fit: cover;
+top: 80px;
+left: 50%;
+transform: translateX(-50%);
+border-radius: 50%;
+}
+
+.adminsign33 {
+position: absolute;
+bottom: 160px;
+left: 50%;
+transform: translateX(-50%);
+}
+.adminsign33 .aadminsign33 {
+text-decoration: none;
+padding: 10px 30px;
+color: #3ffc5b;
+border: solid 3px #3ffc5b;
+border-radius: 18px;
+}
+
+.mottosign33 {
+position: absolute;
+bottom: 280px;
+left: 50%;
+transform: translateX(-50%);
+color: #3ffc5b;
+font-size: 30px;
+}
+
+.motto33{
+position: absolute;
+bottom: 150px;
+left: 50%;
+transform: translateX(-50%);
+color: #ec66fa;
+font-size: 18px;
+}
+
+.motto332{
+position: absolute;
+bottom: 210px;
+left: 50%;
+transform: translateX(-50%);
+color: #42ecf5;
+font-size: 18px;
+}
+
+.motto333{
+position: absolute;
+bottom: 180px;
+left: 50%;
+transform: translateX(-50%);
+color: #42ecf5;
+font-size: 18px;
+}
+
+.motto334{
+position: absolute;
+bottom: 150px;
+left: 50%;
+transform: translateX(-50%);
+color: #42ecf5;
+font-size: 18px;
+}
+
+.motto335{
+position: absolute;
+bottom: 120px;
+left: 65px;
+transform: translateX(-50%);
+color: #42ecf5;
+font-size: 18px;
+}
+
+.iconsid33 {
+position: absolute;
+bottom: 20px;
+height: 100px;
+width: 100%;
+left: 50%;
+transform: translateX(-50%);
+z-index: 1;
+display: flex;
+justify-content: center;
+}
+
+.linkid33{
+position:relative;
+display:block;
+width:40px;
+height:40px;
+font-size:20px;
+line-height:40px;
+background:#1b1b1b;
+margin:7px;
+cursor:pointer;
+border-radius:50%;
+text-align:center;
+box-shadow:0 2px 3px rgba(0,0,0,1), inset 0 -1px 4px rgba(0,0,0,1),
+inset 1px -1px  4px rgba(0,0,0,1), inset 1px -1px 6px 0  rgba(225,225,225,.5),
+0 0 1px 1px #000,0 0 1px 4px #0c0c0c,0 0 0 4px #080808;
+transition:.4s;
+color: #f7979a;
+}
+
+.linkid33:before{
+position:absolute:
+content: " ";
+top:0;
+left:0;
+background:cadetblue;
+height:100%;
+width:100%;
+border-radius:50%;
+z-index:-2;
+transform:scale(0.5);
+transition:0.3s;
+}
+
+.linkid33:hover:before{
+filter:blur(3px);
+transform:scale(1.2);
+box-shadow:0 0 9 rgba(0,0,0,1), inset 0 -1px 4px rbga(0,0,0,1), inset 0px 1px rgba(225,225,225,.1),
+0 0 0 1px #000,0 0 0 1px #0095ff,0 0 9px 8px #0095ff;
+}
+
+.linkid33:hover {
+color:#0095ff;
+}
+
+
+
+
+
   .cardlabel{
   font-size: 15px;
   /*bottom: 15px;
@@ -9635,6 +9912,38 @@ color:#0095ff;
         <a class="linkid30"><abbr title="Not Available"><i class="fab fa-instagram"></i></abbr></a>
         <a class="linkid30"><abbr title="Not Available"><i class="fab fa-twitter"></i></abbr></a>
         <a class="linkid30"><abbr title="Not Available"><i class="fab fa-whatsapp"></i></abbr></a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+<div class = "card33-container ins">
+  <div class = "card33">
+    <div class = "front33">
+      <img class="img36" src="Maru.jpeg" alt="" />
+      <h4 class="adminsign33"><a class="aadminsign33">Moderator</a></h4>
+        <div class="id33">
+          <span class="spanid33">M</span>
+          <span class="spanid33">A</span>
+          <span class="spanid33">R</span>
+          <span class="spanid33">U</span>
+        </div>
+      <p class="cardlabel">Click the card for more info</p>
+    </div>
+    <div class = "back33">
+        <a class="mottosign33">Motto</a>
+        <p class="motto332">"Talk less,</p>
+        <p class="motto333">think more,</p>
+        <p class="motto334">work harder."</p>
+      <div class="iconsid33">
+        <a href="https://www.facebook.com/profile.php?id=100047013456182" class="linkid33"><i class="fab fa-facebook-f"></i></a>
+        <a class="linkid33"><abbr title="Not Available"><i class="fab fa-instagram"></i></abbr></a>
+        <a class="linkid33"><abbr title="Not Available"><i class="fab fa-twitter"></i></abbr></a>
+        <a class="linkid33"><abbr title="Not Available"><i class="fab fa-whatsapp"></i></abbr></a>
       </div>
     </div>
   </div>
