--- a/index.html
+++ b/index.html
@@ -9924,7 +9924,7 @@ color:#0095ff;
 <div class = "card33-container ins">
   <div class = "card33">
     <div class = "front33">
-      <img class="img36" src="Maru.jpeg" alt="" />
+      <img class="img36" src="Maru.jpg" alt="" />
       <h4 class="adminsign33"><a class="aadminsign33">Moderator</a></h4>
         <div class="id33">
           <span class="spanid33">M</span>
